fixed horizontal scrollbar, improved styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 
   position: relative;
@@ -16,6 +16,11 @@ html, body {
 .flex {
   display: flex;
   gap: 1rem;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
 }
 
 .home-container {
@@ -86,7 +91,7 @@ html, body {
   }
   /* THANK YOU'S SECTION*/
     .thankYou {
-      min-width: 100vw;
+      min-width: 100%;
       background-color: #f9f5ed;
       border-bottom: 1px solid #ece8e0;
 
