--- a/src/components/News/News.scss
+++ b/src/components/News/News.scss
@@ -11,14 +11,17 @@
 
         img {
             width: 100%;
+            box-sizing: border-box;
         }
 
         .news-item-content {
             flex-direction: column;
+            padding-bottom: 4rem;
+            border-bottom: 1px solid #f2f2f2;
 
             h1 {
                 font-family: 'Playfair Display', sans-serif;
-                font-size: 3.2rem;
+                font-size: 2rem;
                 font-weight: 400;
                 margin: 0;
 
@@ -30,8 +33,22 @@
                 align-items: flex-start;
                 justify-content: flex-start;
 
+                color:#404040;
+
                 .left-content {
+                    margin-top: 1.2rem;
                     font-size: 0.7rem;
+
+                    display: inline-block;
+                    white-space: nowrap;
+
+                    .featured-post {
+                        color: #666;
+                    }
+
+                    .comments {
+                        color: #aaa;
+                    }
                 }
             }
         }
@@ -74,7 +91,8 @@
         padding: 1rem;
         padding-bottom: 17rem;
 
-        .info {    
+        .info {
+             box-sizing: border-box;    
              width: 100%;
 
             .hours, .reservations, .about {
@@ -86,13 +104,20 @@
         
         .news {
             margin: 0 auto 3.5rem;
+
+            .news-item-body {
+                flex-direction: column;
+                
+                .left-content {
+                    margin-bottom: -2rem;
+                }
+            }
         }
     }
 }
 
 @media (min-width: 480px) and (max-width: 800px) {
     .news-container {
-
         padding: 1rem;
         padding-bottom: 17rem;
 
@@ -108,17 +133,30 @@
         
         .news {
             margin: 0 auto 3.5rem;
+
+            .news-item-body {
+                flex-direction: column;
+
+                .left-content {
+                    margin-bottom: -2rem;
+                }
+            }
         }
     }
 }
 
 @media (min-width: 800px) {
     .info {    
-
        .hours, .reservations, .about {
            width: 40rem;
        }
-   }
+    }
+
+    .news-item-content {
+        h1 {
+            color: red;
+        }
+    }
 }
 
 @media (min-width: 1285px) {
